Fixed horizontal scrolling and text sizing issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,8 @@
 
 body {
     font-family: "Sour Gummy", sans-serif;
+    overflow-x: hidden;
+    width: 100vw;
 }
 
 .navbar {
